Proyecto1/GeneradorFormularios/src/Analizadores/Parametro/parseParametro.java
/* parseParametro.java */
/* Generated By:JavaCC: Do not edit this line. parseParametro.java */
package Analizadores.Parametro;
import AST.Nodo;
import java.io.ByteArrayInputStream;
import java.io.InputStream;
import java.util.ArrayList;

public class parseParametro implements parseParametroConstants {
    public static Nodo main(String args[]) throws ParseException
    {
        if(args.length>0)
        {

            InputStream data = new ByteArrayInputStream(args[0].getBytes());
            parseParametro analizador = new parseParametro(data);
            return analizador.Inicio();
        }
        else
        {
            try
            {
                parseParametro analizador = new parseParametro(System.in);
                analizador.Inicio();
            }
            catch (ParseException e)
            {
                System.out.println(e.getMessage());
                System.out.println("Errores------------------");
            }
        }
        return null;
    }

    void errorPanico(int tokenSinc)
    {
        ParseException e = generateParseException();
        Token t;
        do
        {
            t = getNextToken();
        }
        while (t.kind != tokenSinc);
    }

    public void imprimir(String mensaje)
    {
        System.out.println(mensaje);
    }

  final public Nodo Inicio() throws ParseException {Nodo aux = new Nodo("parametros","parametros",0,0);
    Nodo nuevo = null;
    Token t= null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case cad_max:
    case cad_fila:
    case cad_min:{
      nuevo = Limites();
      jj_consume_token(0);
aux.add(nuevo); {if ("" != null) return aux;}
      break;
      }
    case iniciar:
    case finalizar:{
      nuevo = Rango();
      jj_consume_token(0);
aux.add(nuevo); {if ("" != null) return aux;}
      break;
      }
    case opcion:{
      nuevo = Opcion();
      jj_consume_token(0);
aux.add(nuevo); {if ("" != null) return aux;}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo Opcion() throws ParseException {Nodo izquierdo = new Nodo("opcion","opcion",0,0);
    Nodo derecho = null;
    Token t = null;
    jj_consume_token(opcion);
    jj_consume_token(igual);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case sino:{
      t = jj_consume_token(sino);
      break;
      }
    case verdaderofalso:{
      t = jj_consume_token(verdaderofalso);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
izquierdo.add(new Nodo(t.image,t.image,t.beginColumn,t.beginLine));
        {if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo Rango() throws ParseException {Nodo izquierdo = null;
    Nodo derecho = null;
    Nodo nuevo = new Nodo("rango","rango",0,0);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case iniciar:{
      izquierdo = Iniciar();
      derecho = Finalizar();
nuevo.add(izquierdo); nuevo.add(derecho); {if ("" != null) return nuevo;}
      break;
      }
    case finalizar:{
      izquierdo = Finalizar();
      derecho = Iniciar();
nuevo.add(izquierdo); nuevo.add(derecho); {if ("" != null) return nuevo;}
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo Iniciar() throws ParseException {Nodo nuevo = new Nodo("iniciar","iniciar",0,0);
    Nodo aux = null;
    Token t = null;
    t = jj_consume_token(iniciar);
    jj_consume_token(igual);
    aux = logica();
nuevo.setColumna(t.beginColumn); nuevo.setLinea(t.beginLine); nuevo.add(aux); {if ("" != null) return nuevo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo Finalizar() throws ParseException {Nodo nuevo = new Nodo("finalizar","finalizar",0,0);
    Nodo aux = null;
    Token t = null;
    t = jj_consume_token(finalizar);
    jj_consume_token(igual);
    aux = logica();
nuevo.setColumna(t.beginColumn); nuevo.setLinea(t.beginLine); nuevo.add(aux); {if ("" != null) return nuevo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo Limites() throws ParseException {Nodo nuevo = new Nodo("limites","limites",0,0);
    Nodo izquierdo = null;
    Nodo derecho = null;
    Token t ;
    label_1:
    while (true) {
      izquierdo = Limite();
nuevo.add(izquierdo);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case cad_max:
      case cad_fila:
      case cad_min:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
    }
{if ("" != null) return nuevo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo Limite() throws ParseException {Nodo nuevo= null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case cad_min:{
      nuevo = limiteMinimo();
{if ("" != null) return nuevo;}
      break;
      }
    case cad_max:{
      nuevo = limiteMaximo();
{if ("" != null) return nuevo;}
      break;
      }
    case cad_fila:{
      nuevo = minimoFilas();
{if ("" != null) return nuevo;}
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo limiteMinimo() throws ParseException {Nodo izquierdo = null ;
    Nodo derecho = null ;
    Token t = null;
    t = jj_consume_token(cad_min);
    jj_consume_token(igual);
    derecho = logica();
izquierdo = new Nodo("cad_min","cad_min",0,0);
        izquierdo.add(derecho);
        {if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo limiteMaximo() throws ParseException {Nodo izquierdo = null ;
    Nodo derecho = null ;
    Token t = null;
    t = jj_consume_token(cad_max);
    jj_consume_token(igual);
    derecho = logica();
izquierdo = new Nodo("cad_max","cad_max",0,0);
        izquierdo.add(derecho);
        {if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo minimoFilas() throws ParseException {Nodo izquierdo = null ;
    Nodo derecho = null ;
    Token t = null;
    t = jj_consume_token(cad_fila);
    jj_consume_token(igual);
    derecho = logica();
izquierdo = new Nodo("cad_fila","cad_fila",0,0);
        izquierdo.add(derecho);
        {if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo logica() throws ParseException {Nodo izquierdo;
    Nodo derecho;
    Token t = null;
    izquierdo = exprAnd();
    label_2:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_2;
      }
      t = jj_consume_token(or);
      derecho = exprAnd();
Nodo aux = izquierdo;
            izquierdo = new Nodo(t.image,t.image,t.beginColumn, t.beginLine);
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo exprAnd() throws ParseException {Nodo izquierdo = null;
    Nodo derecho = null;
    Token t = null;
    Nodo nuevo =null;
    izquierdo = Relacional();
    label_3:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_3;
      }
      t = jj_consume_token(and);
      derecho = Relacional();
Nodo aux = izquierdo;
            izquierdo = new Nodo(t.image,t.image,t.beginColumn, t.beginLine);
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo Relacional() throws ParseException {Nodo izquierdo = null;
    Nodo derecho = null;
    Nodo operador = null;
    izquierdo = Comparacion();
    label_4:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_4;
      }
      operador = opRelacional2();
      derecho = Comparacion();
Nodo aux = izquierdo;
            izquierdo = new Nodo(operador.getTipo(),operador.getValue(),operador.getColumna(),operador.getLinea());
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo Comparacion() throws ParseException {Nodo izquierdo = null;
    Nodo derecho = null;
    Nodo operador = null;
    izquierdo = Expr();
    label_5:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_5;
      }
      operador = opRelacional();
      derecho = Expr();
Nodo aux = izquierdo;
            izquierdo = new Nodo(operador.getTipo(),operador.getValue(),operador.getColumna(),operador.getLinea());
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo opRelacional2() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case igual:{
      t = jj_consume_token(igual);
{if ("" != null) return new Nodo("igual",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case desigual:{
      t = jj_consume_token(desigual);
{if ("" != null) return new Nodo("desigual",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo opRelacional() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case mayorque:{
      t = jj_consume_token(mayorque);
{if ("" != null) return new Nodo("maryoque",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case menorque:{
      t = jj_consume_token(menorque);
{if ("" != null) return new Nodo("menorque",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case mayorigualque:{
      t = jj_consume_token(mayorigualque);
{if ("" != null) return new Nodo("mayorigualque",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case menorigualque:{
      t = jj_consume_token(menorigualque);
{if ("" != null) return new Nodo("menorigualque",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo Expr() throws ParseException {Nodo izquierdo = null;
    Nodo derecho = null;
    Token t = null;
    izquierdo = ExprMulti();
    label_6:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case suma:{
        t = jj_consume_token(suma);
        break;
        }
      case menos:{
        t = jj_consume_token(menos);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      derecho = ExprMulti();
Nodo aux = izquierdo;
            izquierdo = new Nodo(t.image,t.image,t.beginColumn, t.beginLine);
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo ExprMulti() throws ParseException {Nodo izquierdo = null;
    Nodo derecho = null;
    Token t = null;
    izquierdo = ExprPotencia();
    label_7:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case multi:{
        t = jj_consume_token(multi);
        break;
        }
      case div:{
        t = jj_consume_token(div);
        break;
        }
      case mod:{
        t = jj_consume_token(mod);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      derecho = ExprPotencia();
Nodo aux = izquierdo;
            izquierdo = new Nodo(t.image,t.image,t.beginColumn, t.beginLine);
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo ExprPotencia() throws ParseException {Nodo izquierdo = null;
    Nodo nuevo =  new Nodo("ExpPotencia","ExpPotencia",0,0);
    Nodo derecho = null;
    Token t = null;
    izquierdo = Elemental();
    label_8:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_8;
      }
      t = jj_consume_token(potencia);
      derecho = Elemental();
Nodo aux = izquierdo;
            izquierdo = new Nodo(t.image,t.image,t.beginColumn, t.beginLine);
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo Elemental() throws ParseException {Nodo nuevo = null;
    Nodo auxiliar = null;
    Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case dospuntos:{
      t = jj_consume_token(dospuntos);
{if ("" != null) return new Nodo("var","padre",t.beginColumn, t.beginLine);}
      break;
      }
    case punto:{
      t = jj_consume_token(punto);
{if ("" != null) return new Nodo("var","this",t.beginColumn, t.beginLine);}
      break;
      }
    case entero:{
      t = jj_consume_token(entero);
{if ("" != null) return new Nodo("entero",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case doble:{
      t = jj_consume_token(doble);
{if ("" != null) return new Nodo("doble",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case caracter:{
      t = jj_consume_token(caracter);
{if ("" != null) return new Nodo("caracter",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case identificador:{
      t = jj_consume_token(identificador);
{if ("" != null) return new Nodo("var",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case varP:{
      t = jj_consume_token(varP);
String sub = t.image.substring(2,t.image.length()-1); {if ("" != null) return new Nodo("varP",sub,t.beginColumn, t.beginLine);}
      break;
      }
    case cadena:{
      t = jj_consume_token(cadena);
{if ("" != null) return new Nodo("cadena",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case fechahora:{
      t = jj_consume_token(fechahora);
{if ("" != null) return new Nodo("fechahora",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case hora:{
      t = jj_consume_token(hora);
{if ("" != null) return new Nodo("hora",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case fecha:{
      t = jj_consume_token(fecha);
{if ("" != null) return new Nodo("fecha",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case verdadero:{
      t = jj_consume_token(verdadero);
{if ("" != null) return new Nodo("verdadero",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case falso:{
      t = jj_consume_token(falso);
{if ("" != null) return new Nodo("falso",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case parA:{
      t = jj_consume_token(parA);
      auxiliar = logica();
      jj_consume_token(parC);
nuevo = new Nodo("Expr","()",t.beginColumn, t.beginLine);
        nuevo.add(auxiliar);
        {if ("" != null) return nuevo;}
      break;
      }
    case menos:{
      t = jj_consume_token(menos);
      auxiliar = logica();
nuevo = new Nodo("expr","expr",t.beginColumn, t.beginLine);
        nuevo.add(new Nodo("menos","menos",t.beginColumn,t.beginLine));
        nuevo.add(auxiliar);
        {if ("" != null) return nuevo;}
      break;
      }
    case not:{
      t = jj_consume_token(not);
      auxiliar = logica();
nuevo = new Nodo("expr","expr",t.beginColumn, t.beginLine);
        nuevo.add(new Nodo("not","not",t.beginColumn,t.beginLine));
        nuevo.add(auxiliar);
        {if ("" != null) return nuevo;}
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_3_1()
 {
    if (jj_scan_token(or)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_38()
 {
    if (jj_scan_token(menos)) return true;
    return false;
  }

  private boolean jj_3R_23()
 {
    if (jj_scan_token(menorigualque)) return true;
    return false;
  }

  private boolean jj_3R_22()
 {
    if (jj_scan_token(mayorigualque)) return true;
    return false;
  }

  private boolean jj_3R_21()
 {
    if (jj_scan_token(menorque)) return true;
    return false;
  }

  private boolean jj_3R_13()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3R_20()
 {
    if (jj_scan_token(mayorque)) return true;
    return false;
  }

  private boolean jj_3R_37()
 {
    if (jj_scan_token(parA)) return true;
    return false;
  }

  private boolean jj_3R_36()
 {
    if (jj_scan_token(falso)) return true;
    return false;
  }
